--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "start":"json-server --watch db.json",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -15,6 +16,7 @@
     "vite": "^4.3.2"
   },
   "dependencies": {
+    "json-server": "^0.17.3",
     "navigo": "^8.11.1"
   }
 }
